force-app/main/default/objects/LogEvent__e/LogEvent__e.object-meta.xml
<CustomObject>
    <description>Contains Log data to be inserted asynchronously, via its platform event trigger.
Publish immediately behavior guarantees that logs published using this event will be captured, regardless of rollbacks and uncaught exceptions.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>