force-app/main/default/objects/LogEvent__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Maps to the Log field of the same name.</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>