force-app/main/default/objects/LogEvent__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Contains an optional value which categorizes the log. Ex., a specific managed package, or a specific business process. Maps to the Log field of the same name.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>