force-app/main/default/objects/LogEvent__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Indicates the severity of the log message.  Maps to the Log field of the same name. Values are derived from the System.LoggingLevel enum:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_enum_System_LoggingLevel.htm</description>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>