force-app/main/default/objects/LogEvent__e/fields/LoggedBy__c.field-meta.xml
<CustomField>
    <fullName>LoggedBy__c</fullName>
    <description>Indicates the user that requested the Log. This may differ from the &quot;Created By&quot; user, if the log was published via platform event. Maps to the Log field of the same name.</description>
    <label>Logged By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>