force-app/main/default/objects/LogEvent__e/fields/Ordinal__c.field-meta.xml
<CustomField>
    <description>Indicates the order in which logs in the same transaction were inserted (beginning with 1). Maps to the Log field of the same name.</description>
    <fullName>Ordinal__c</fullName>
    <label>Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>