force-app/main/default/objects/LogEvent__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <description>Maps to the Log field of the same name.</description>
    <fullName>StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>